code/examples/stderr/misc_3.stderr
error[E0599]: no method named `func` found for struct `Foo` in the current scope
 --> examples/misc_3.rs:7:9
  |
2 | struct Foo {
  | ---------- method `func` not found for this struct
...
7 |     foo.func();
  |         ^^^^ field, not a method
  |
help: to call the function pointer stored in `func`, surround the field access with parentheses
  |
7 |     (foo.func)();
  |     +        +

For more information about this error, try `rustc --explain E0599`.
error: could not compile `code` (example "misc_3") due to 1 previous error
